--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             
                 <div id="phone-object" class="input-object">    
-                    <label for="phone">Phone number*</label>
+                    <label for="phone">Cell phone number*</label>
                     <input type="tel" id="phone" onkeyup="validateKeyUp(event)" name="phone" placeholder="+46123456789">
                     <p></p>
                 </div>
