pinConfirm switch broken

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <div id="pin-object" class="input-object">
                     <label for="pin">Pin number*</label>
                     <input type="password" id="pin" onkeyup="validateKeyUp(event)" name="pin" placeholder="123456">
-                    <p>The pin needs to be exactly six numerical digits long.</p>
+                    <p>Six numerical digits (123456)</p>
                 </div>
 
                 <div id="pinConfirm-object" class="input-object">
-                    <label for="pin-confirm">Confirm pin number*</label>
+                    <label for="pinConfirm">Confirm pin number*</label>
                     <input type="password" id="pinConfirm" onkeyup="validateKeyUp(event)" name="pinConfirm" placeholder="123456">
                     <p></p>
                 </div>
