full api functionality

--- a/edit.html
+++ b/edit.html
@@ -9,12 +9,9 @@
 </head>
 <body>
     
-    <main>
-        <div id="results"></div>
-    </main>
+    <main id="results"></main>
 
-    <script src="./validate-scripts.js"></script>
     <script src="./api-scripts.js"></script>
-    <script>editUser()</script>
+    <script>printEditUser()</script>
 </body>
 </html>
