--- a/profile.html
+++ b/profile.html
@@ -11,9 +11,9 @@
     
     <main>
         <div id="results"></div>
+        <a href="index.html" class="btn">Back to user list</a>
     </main>
 
-    <script src="./validate-scripts.js"></script>
     <script src="./api-scripts.js"></script>
     <script>printUser()</script>
 </body>
